cmake_minimum_required(VERSION 2.8.10)

set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_COLOR_MAKEFILE   ON)
set(CMAKE_SKIP_BUILD_RPATH true )
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/install/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/install/bin)

project(kappaio-zll-top C CXX)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../src output/kappaio-zll)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_NAME "kappaio-zll")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "kappaio-dev") #required
SET(CPACK_INSTALL_CMAKE_PROJECTS "${CMAKE_CURRENT_SOURCE_DIR};kappaio-zll;ALL;/")
SET(CPACK_PACKAGING_INSTALL_PREFIX /)
SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
SET(CPACK_PACKAGE_CONTACT "dev@kapparock.com")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "kappaio (>=1.0)")
set(CPACK_PACKAGE_VERSION "1.2.0")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "2")
set(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "kappaio addon for controlling ZigBee HA dimmable lights")
SET(CPACK_PACKAGE_DESCRIPTION "REST APIs for controlling ZigBee HA lights using kappaio")
SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
SET(KAPPAIO_BIN_PERMISSIONS "OWNER_EXECUTE;OWNER_WRITE;OWNER_READ;GROUP_READ;GROUP_EXECUTE;WORLD_READ;WORLD_EXECUTE")
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA postinst)
set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})

include(CPack)
INSTALL(DIRECTORY install/lib/ FILE_PERMISSIONS ${KAPPAIO_BIN_PERMISSIONS} DESTINATION usr/lib/kappaio/plugins)
INSTALL(FILES ../files/hueclusters.json DESTINATION usr/lib/kappaio/files)

